@@ -9,6 +9,7 @@ SET(kipiplugin_picasawebexport_PART_SRCS
     picasawebwindow.cpp
     picasawebalbum.cpp
     picasawebreplacedialog.cpp
+    picasawebimglist.cpp
    )
 
 KDE4_ADD_PLUGIN(kipiplugin_picasawebexport ${kipiplugin_picasawebexport_PART_SRCS})
